# rpigotchi

firmware/: Cargo.toml  README.md
firmware/src/: main.rs  new.rs  old.rs  spotify.rs  utils.rs
pcb/: #auto_saved_files#  _autosave-rpigotchi.kicad_sch  rpigotchi.kicad_pcb  rpigotchi.kicad_prl  rpigotchi.kicad_pro  rpigotchi.kicad_sch  ~rpigotchi.kicad_sch.lck
